--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Rups265/Ranch-Network.git"
+    "url": "https://github.com/RupeshKNGTS/barnWeb.git"
   },
   "author": "Rupesh Kushwaha",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Rups265/Ranch-Network.git"
+    "url": "https://github.com/RupeshKNGTS/barnWeb"
   },
   "homepage": "",
   "dependencies": {
